corrected image asset paths

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -19,7 +19,7 @@ $g4: $g3 * $gr;
 html {
     margin: 0;
     padding: 0;
-    background-image: url(3.png), url(5.png);
+    background-image: url(/assets/3.png), url(/assets/5.png);
     height: 100%;
     
 }
