--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -8,6 +8,8 @@ $b2: #26140c;
 $c1: #ab8574;
 $c2: #d6bcb1;
 
+$shadow: rgba(0,0,0,0.3);
+
 $gr: 1.618;
 
 $g1: 1em * $gr;
@@ -20,22 +22,18 @@ html {
     margin: 0;
     padding: 0;
     background-image: url(/assets/3.png), url(/assets/5.png);
-    height: 100%;
-    
+    height: 100%;    
 }
 
 body{
     font-family: sans-serif;
     font-size: 14px;
     width: 100%;
-    margin: $g1 auto;
+    color: $b2;
+    padding: $g1;
     font-family: 'Vollkorn';    
 }
 
-.wrapper {
-    @include row();
-    margin: auto;
-}
 
 h1 {
     font-size: $g3;
@@ -43,17 +41,35 @@ h1 {
 h3 {
     font-size:$g1;
 }
+
+#content {
+    @include row();
+    margin: auto;
+    padding: $g1;
+    background: $c2;
+    @include border-radius(1em);
+    margin-top: $g1;
+    
+}
 header {
-    text-align:center;
+    @include row();
+    margin: auto;
     background: $b2;
     padding: $g1;
-    @include box-shadow(inset 0 0 5px 5px rgba(0,0,0,0.3));
-    @include border-radius(2em);
+    @include box-shadow(inset 0 0 5px 5px $shadow);
+    @include border-radius(1em);
     border: thin solid $b2;
-
+    position: relative;
     h1 {
         font-family: 'Leckerli One';
         color: $c2;
         text-shadow: 5px -1px -1px #000;
+    }
+    h4 {
+        position: absolute;
+        bottom: $g1/1.25;
+        right: $g1/1.25;
+        color: $c1;
+        font-size: $g1 * 0.8;
     }
 }
