--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,31 +4,35 @@
   <title>Schockolade Tante : Bangalore's Best Chocolates</title>
   <%= stylesheet_link_tag    "application" %>  
   <%= csrf_meta_tags %>
-  
+  <meta charset="utf-8" />
+
 </head>
 <body>
-<div class="wrapper">
+
   <header>
     <h1 class='name'>Schokolade Tante</h1>
+    <h4>Bangalore's Finest Handcrafted Chocolate</h4>
   </header>  
-<%= yield %>
-</div>
-<%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" %>
-<%= javascript_include_tag "application" %>
-<script type="text/javascript">
-  WebFontConfig = {
-    google: { families: [ 'Vollkorn:400italic,400,700:latin', 'Tangerine', 'Leckerli+One' ] }
-  };
-  (function() {
-    var wf = document.createElement('script');
-    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+  <section id="content">
+    <%= yield %>
+  </section>
+
+  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" %>
+  <%= javascript_include_tag "application" %>
+  <script type="text/javascript">
+    WebFontConfig = {
+      google: { families: [ 'Vollkorn:400italic,400,700:latin', 'Tangerine', 'Leckerli+One', 'Prociono', 'Droid+Serif', 'Droid+Sans' ] }
+    };
+    (function() {
+      var wf = document.createElement('script');
+      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
       '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-    wf.type = 'text/javascript';
-    wf.async = 'true';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(wf, s);
-  })(); 
-</script>
+      wf.type = 'text/javascript';
+      wf.async = 'true';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(wf, s);
+    })(); 
+  </script>
 
 </body>
 </html>
