fixed tests and added blitzio auth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <header>
     <h1 class='name'>Schokolade Tante</h1>
-    <h4>Bangalore's Finest Handcrafted Chocolate</h4>
+    <h4>Bangalore's Finest Handcrafted Chocolates</h4>
   </header>  
   <section id="content">
     <%= yield %>
