moving towards a cleaner look

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <header>
     <h1 class='name'>Schokolade Tante</h1>
-    <h4>Bangalore's Finest Handcrafted Chocolates</h4>
+    <h4>Bangalore's finest handcrafted Chocolates.</h4>
   </header>  
   <section id="content">
     <%= yield %>
@@ -21,7 +21,7 @@
   <%= javascript_include_tag "application" %>
   <script type="text/javascript">
     WebFontConfig = {
-      google: { families: [ 'Vollkorn:400italic,400,700:latin', 'Tangerine', 'Leckerli+One', 'Prociono', 'Droid+Serif', 'Droid+Sans' ] }
+      google: { families: [ 'Vollkorn:400italic,400,700:latin', 'Tangerine', 'Leckerli+One', 'Prociono', 'Droid+Serif', 'Droid+Sans', 'Copse' ] }
     };
     (function() {
       var wf = document.createElement('script');
