--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -21,7 +21,6 @@ $g4: $g3 * $gr;
 html {
     margin: 0;
     padding: 0;
-    background-image: url(/assets/3.png), url(/assets/5.png);
     height: 100%;    
 }
 
@@ -31,7 +30,7 @@ body{
     width: 100%;
     color: $b2;
     padding: $g1;
-    font-family: 'Vollkorn';    
+    font-family: 'Droid Serif';    
 }
 
 
@@ -46,30 +45,27 @@ h3 {
     @include row();
     margin: auto;
     padding: $g1;
-    background: $c2;
     @include border-radius(1em);
-    margin-top: $g1;
     
 }
 header {
     @include row();
     margin: auto;
-    background: $b2;
     padding: $g1;
-    @include box-shadow(inset 0 0 5px 5px $shadow);
-    @include border-radius(1em);
-    border: thin solid $b2;
     position: relative;
+    @include border-radius(1em);
     h1 {
         font-family: 'Leckerli One';
-        color: $c2;
-        text-shadow: 5px -1px -1px #000;
+        color: $b1;
     }
     h4 {
         position: absolute;
-        bottom: $g1/1.25;
-        right: $g1/1.25;
-        color: $c1;
+        top:0;
+        right: 0;
+        color: $b2;
+        background: $c2;
+        @include border-radius(0.61em);
         font-size: $g1 * 0.8;
+        padding: 0.61em;
     }
 }
