--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -29,8 +29,8 @@ body{
     font-size: 14px;
     width: 100%;
     color: $b2;
-    padding: $g1;
-    font-family: 'Droid Serif';    
+    padding: 0 $g1 $g1 $g1;
+    font-family: 'Georgia';    
 }
 
 
@@ -40,13 +40,15 @@ h1 {
 h3 {
     font-size:$g1;
 }
-
+a {
+    text-decoration: none;
+}
 #content {
     @include row();
     margin: auto;
     padding: $g1;
     @include border-radius(1em);
-    
+    border-top: thin solid $c1;
 }
 header {
     @include row();
@@ -57,15 +59,34 @@ header {
     h1 {
         font-family: 'Leckerli One';
         color: $b1;
+        display: inline-block;
     }
     h4 {
+        $factor: 0.7;
+        position: absolute;    
+        right: $g1;
+        bottom: $g1;
+        color: $b2;        
+        font-style: italic;
+        font-size: $g1 * $factor;        
+    }
+    nav {
         position: absolute;
-        top:0;
-        right: 0;
-        color: $b2;
-        background: $c2;
-        @include border-radius(0.61em);
-        font-size: $g1 * 0.8;
-        padding: 0.61em;
+        top: 0;
+        right: $g3;
+        a {
+            padding: 0.618em;
+            margin-left: 0.618em;
+            display: inline-block;
+            color: $c2;
+            background: $b1;
+            @include border-bottom-radius(0.618em);
+            @include transition-duration(0.5s);
+            @include transition-property("background, color");
+            &:hover{
+                color: $b1;
+                background: $c2;
+            }
+        }
     }
 }
