--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
   <%= stylesheet_link_tag    "application" %>  
   <%= csrf_meta_tags %>
   <meta charset="utf-8" />
-
 </head>
 <body>
 
@@ -21,22 +20,24 @@
     <%= yield %>
   </section>
 
-  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" %>
-  <%= javascript_include_tag "application" %>
+  <footer>
+    Created by Sudhir Jonathan. &copy; All rights reserved.
+  </footer>
+  
+  <%= javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" %>
+  <%= javascript_include_tag "application" %>  
   <script type="text/javascript">
     WebFontConfig = {
-      google: { families: [ 'Vollkorn:400italic,400,700:latin', 'Tangerine', 'Leckerli+One', 'Prociono', 'Droid+Serif', 'Droid+Sans', 'Copse' ] }
+      google: { families: [ 'Leckerli+One' ] }
     };
     (function() {
       var wf = document.createElement('script');
-      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+      wf.src = '//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
       wf.type = 'text/javascript';
       wf.async = 'true';
       var s = document.getElementsByTagName('script')[0];
       s.parentNode.insertBefore(wf, s);
     })(); 
-  </script>
-
+  </script>  
 </body>
 </html>
