--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<section></section>
+<section class="chocolate-listing">
+  <% @chocolates.each do |chocolate| %>
+  <%= render :partial=> 'chocolates/chocolate', :locals => {chocolate: chocolate} %>
+  <% end %>
+</section>
 <aside></aside>
