--- a/app/assets/stylesheets/chocolates.css.scss
+++ b/app/assets/stylesheets/chocolates.css.scss
@@ -1,11 +1,10 @@
 @import "layout";
-@import "grid";
 
 .chocolate{
     display: inline-block;
     @include col(6);
     text-align: center;
-    padding: 0.5em;
+    padding: $g1;
     border: thin solid $c2;
     @include border-radius(0.3em);
 }
