--- a/app/views/chocolates/index.html.erb
+++ b/app/views/chocolates/index.html.erb
@@ -1,5 +1,15 @@
 <h3>The Chocolist</h3>
 <% @chocolates.each do |chocolate| %>
 <%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
+<%= render :partial => 'chocolate', :locals => {chocolate: chocolate} %>
 <% end %>
 <%= link_to 'New Chocolate', new_chocolate_path %>
