--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     Created by Sudhir Jonathan. &copy; All rights reserved.
   </footer>
   
-  <%= javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" %>
+  <!-- <%= javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" %> -->
   <%= javascript_include_tag "application" %>  
   <script type="text/javascript">
     WebFontConfig = {
