--- a/app/assets/stylesheets/chocolates.css.scss
+++ b/app/assets/stylesheets/chocolates.css.scss
@@ -1,18 +1,23 @@
 @import "layout";
 
 .chocolate-listing {
-    @include col(16);
-	.chocolate{
+    @include col(9.0557);
+  	.chocolate{
+  		img {
+  		  max-width: 100%;
+  		  max-height: 7em;
+  		  margin-bottom: $g1;
+  		}
 	    display: inline-block;
-	    @include col(5);
+	    @include col(3);
 	    text-align: center;
 	    padding: $g1;
 	    border: thin solid $c2;
 	    @include border-radius(0.3em);
-		margin: 0 $g1 $g1 0;
-		&:nth-child(3n){
-			@include last();
-		}
+		  margin: 0 $g1 $g1 0;
+		  &:nth-child(3n){
+			  @include last();
+		  }
 	}
 
 }
