--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -14,8 +14,8 @@ $g3: $g2 * $gr;
 $g4: $g3 * $gr;
 
 $width: 70em; /* total with of page */ 
-$columns: 24; /* number of columns */ 
-$col_margin: $gr * 1em; /* margin between columns */ 
+$columns: 12; /* number of columns */ 
+$col_margin: $g1; /* margin between columns */ 
 /* math magic */ 
 $col_width: ($width - ($col_margin * ($columns - 1))) / $columns; $col_total_width: $col_width + $col_margin; 
 /* create row div */ 
