--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,4 +22,6 @@
 <%= render :partial=> 'chocolates/chocolate', :locals => {chocolate: chocolate} %>
 <% end %>
 </section>
-<aside></aside>
+<aside>
+  
+</aside>
