--- a/app/views/chocolates/_chocolate.html.erb
+++ b/app/views/chocolates/_chocolate.html.erb
@@ -1,4 +1,4 @@
-<section class="chocolate">
+<a class="chocolate" href="<%= chocolate_path chocolate%>">
 	<img src="/assets/truffle.gif"/>
   <h6><%= chocolate.name %></h6>
-</section>
+</a>
