--- a/app/views/chocolates/_chocolate.html.erb
+++ b/app/views/chocolates/_chocolate.html.erb
@@ -1,4 +1,4 @@
 <a class="chocolate" href="<%= chocolate_path chocolate%>">
 	<img src="/assets/truffle.gif"/>
-  <h6><%= chocolate.name %></h6>
+  <h6 class="name"><%= chocolate.name %></h6>
 </a>
