--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,5 +4,5 @@
 <% end %>
 </section>
 <aside>
-  
+  <div class="fb-like" data-send="true" data-width="225" data-layout="standard" data-show-faces="true"></div>
 </aside>
