--- a/app/assets/stylesheets/chocolates.css.scss
+++ b/app/assets/stylesheets/chocolates.css.scss
@@ -1,5 +1,6 @@
 .chocolate-listing {
   width: ($width * 0.75);
+  display: inline-block;
   .chocolate{
     cursor: pointer;
     img {
@@ -15,7 +16,7 @@
       right: 0;
       bottom: 0;
       display: block;      
-      padding: 0.81em;
+      padding: 0.8em;
       background: $c1-trans;
       text-align: right;
       @include border-bottom-radius(0.5em);
