--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 <%= javascript_include_tag "application" %>  
 <script type="text/javascript">
   WebFontConfig = {
-    google: { families: [ 'Leckerli+One', 'Yanone+Kaffeesatz', 'News+Cycle', 'Nobile:400,700' ] }
+    google: { families: [ 'Leckerli+One', 'Yanone+Kaffeesatz', 'News+Cycle', 'Nobile:400,700,i' ] }
   };
   (function() {
     var wf = document.createElement('script');
